--- a/manifests/domains.manifest.json
+++ b/manifests/domains.manifest.json
@@ -2,9 +2,9 @@
     "id": "domains",
     "description": "Core business domains of the RWA platform.",
     "meta": {
-      "version": "1.2.0",
-      "updated": "2025-11-17T13:40:00+03:00",
-      "edited_by": ["co-76ca"]
+      "version": "1.2.1",
+      "updated": "2025-11-17T15:12:00+03:00",
+      "edited_by": ["co-76ca", "co-3c63"]
     },
     "domains": [
       {
