--- a/manifests/workflow.manifest.json
+++ b/manifests/workflow.manifest.json
@@ -2,9 +2,9 @@
   "id": "workflow",
   "description": "Workplace, orchestration, tools, and operational workflow for AI-assisted development and research.",
   "meta": {
-    "version": "1.1.0",
-    "updated": "2025-11-17T13:40:00+03:00",
-    "edited_by": ["co-76ca"]
+    "version": "1.1.1",
+    "updated": "2025-11-17T15:12:00+03:00",
+    "edited_by": ["co-76ca", "co-3c63"]
   },
   "workplaces": {
     "servers": [
